# autoresearch-mlx

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  ai_peak_valley_strategy.pine  autoresearch-mlx-spyx.code-workspace  autoresearch.bench.sh  autoresearch.checks.sh  autoresearch.md  autoresearch.sh  bench_spyx_mlx_cpu_only.json  bench_spyx_mlx_gpu_only.json  bench_spyx_vs_mlx.json  bench_spyx_vs_mlx.py  bench_spyx_vs_mlx_jax_cpu.json  bench_spyx_vs_mlx_jax_cpu_final.json  bench_spyx_vs_mlx_jax_cpu_surface_final.json  bench_spyx_vs_mlx_jax_cpu_upgraded.json  bench_spyx_vs_mlx_jax_metal.json  bench_spyx_vs_mlx_jax_metal_pinned.json  bench_spyx_vs_mlx_jax_metal_pinned_upgraded.json  biomimicry.md  checkpoint.md  data_generation.md  dvc.yaml  generate.py  generate_stereo_events.py  params_snn_quant.yaml  prepare.py  prepare_snn.py  prepare_vision.py  program.md  program_snn.md  pyproject.toml  results.tsv  results_snn.tsv  (+13 more)
.codex/: TASK.md
datagen/: __init__.py  config.py  emulator.py  math_utils.py  optics.py  scene.py  sensor_models.py  trajectory.py  writer.py
literature/: EXPERIMENT-IDEAS-PRIORITIZED.md  activation-functions.md  architecture-small-transformers.md  literature-refresh-mar19-evening.md  lr-schedules.md  micro-architecture-research-mar19.md  nanoGPT-speedrun-insights.md  normalization-improvements.md  optimizer-improvements.md  targeted-research-mar19.md  training-efficiency.md
orchestration/: snn_quant_dagster.py
scripts/: backfill_logs.py  build_stereo_event_readme_video.py  ensure-runtime.sh  log_utils.py  precommit_ty_notebooks.sh  print_local_state_paths.sh  run_datagen_smoke.sh  run_experiment.py
spyx_mlx/: __init__.py  axn.py  data.py  experimental.py  fn.py  loaders.py  nir.py  nn.py
strategy/: hypotheses.md  interactions.md  learnings.md  near-misses.md
(+59 files in other folders)
