[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Apple Silicon MLX port of Karpathy's autoresearch"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mlx>=0.30.0,<1.0",
    "numpy>=2.2.6,<3.0",
    "pyarrow>=21.0.0,<22.0",
    "regex>=2025.7.34",
    "requests>=2.32.0,<3.0",
    "rustbpe>=0.1.0,<1.0",
    "tiktoken>=0.11.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]
test = [
    "pytest>=8.0",
]
