[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Apple Silicon MLX port of Karpathy's autoresearch"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mlx>=0.30.0",
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "regex>=2025.7.34",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]

[tool.setuptools]
py-modules = ["prepare", "train"]
